nav z-index fix

--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -9,6 +9,7 @@ nav {
     box-sizing: border-box;
     transition: .3s;
     font-size: 2.5vh;
+    z-index: 10
 }
 
 /* ================================================= */
